updated openapi.yml to add new snippet routes
